fixed world map, no longer shows towers or machine rooms etc. outlines the black text with white for better visibility

--- a/web/files/css/windows/map_window.css
+++ b/web/files/css/windows/map_window.css
@@ -50,7 +50,7 @@
     line-height: 8px;
     font-weight: bold;
     font-size: 14px;
-    text-shadow: 0 0 4px white;
+    text-shadow: -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff, 2px 2px 0 #fff
     cursor: pointer;
     -webkit-transform-origin: 0% 50%;
     -moz-transform-origin: 0% 50%;
